--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "bb",
     "version": "0.0.0",
     "dependencies": {
+        "express": "3.0.5",
         "socket.io": "0.9.13",
         "underscore": "1.4.3"
     }
