--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
     "name": "bb",
     "version": "0.0.0",
+    "engines": {
+        "node": "0.8.x",
+        "npm": "1.1.x"
+    },
     "dependencies": {
-        "express": "3.0.5",
-        "socket.io": "0.9.13",
-        "underscore": "1.4.3"
+        "express": "3.0.x",
+        "socket.io": "0.9.x",
+        "underscore": "1.4.x"
     }
 }
