--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "dependencies": {
         "express": "3.0.x",
+        "node-uuid": "1.4.x",
         "socket.io": "0.9.x",
         "underscore": "1.4.x"
     }
