--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dependencies": {
         "express": "3.0.x",
         "node-uuid": "1.4.x",
+        "requirejs": "2.1.x",
         "socket.io": "0.9.x",
         "underscore": "1.4.x"
     }
