--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "dependencies": {
         "express": "3.0.x",
+        "moment": "1.7.x",
         "node-uuid": "1.4.x",
         "requirejs": "2.1.x",
         "socket.io": "0.9.x",
