--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "dependencies": {
         "express": "3.0.x",
+        "jslint": "0.1.x",
         "moment": "1.7.x",
         "node-uuid": "1.4.x",
         "requirejs": "2.1.x",
