--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "glob": "3.1.x",
         "jslint": "0.1.x",
         "moment": "1.7.x",
+        "mongodb": "1.2.x",
         "node-uuid": "1.4.x",
         "requirejs": "2.1.x",
         "socket.io": "0.9.x",
