--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "jslint": "0.1.x",
         "moment": "1.7.x",
         "mongodb": "1.2.x",
+        "natural": "0.1.x",
         "node-uuid": "1.4.x",
         "requirejs": "2.1.x",
         "socket.io": "0.9.x",
