--- a/package.json
+++ b/package.json
@@ -7,24 +7,24 @@
         "email": "chocolaterain@anypony.com",
         "web": "https://github.com/ChocRain"
     }],
-    "repositories": [{
+    "repository": {
         "type": "git",
         "url": "https://github.com/ChocRain/bb.git"
-    }],
+    },
     "licenses": [{
         "name": "MIT",
         "url": "http://www.opensource.org/licenses/MIT"
     }],
     "engines": {
-        "node": "0.8.x",
-        "npm": "1.1.x"
+        "node": "0.10.x",
+        "npm": "1.2.x"
     },
     "dependencies": {
-        "express": "3.0.x",
-        "glob": "3.1.x",
+        "express": "3.2.x",
+        "glob": "3.2.x",
         "jslint": "0.1.x",
-        "moment": "1.7.x",
-        "mongodb": "1.2.x",
+        "moment": "2.x.x",
+        "mongodb": "1.3.x",
         "natural": "0.1.x",
         "node-uuid": "1.4.x",
         "requirejs": "2.1.x",
