--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "npm": "1.2.x"
     },
     "dependencies": {
+        "csslint": "0.9.10",
         "express": "3.2.x",
         "glob": "3.2.x",
         "jslint": "0.1.x",
